--- a/index.html
+++ b/index.html
@@ -1,15 +1,61 @@
 <!DOCTYPE html>
-<html lang="eng">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>
-Product Landing Page
-</title>
-    </head>
-    <body>
-<h1>
-    Hello World, we are software developers!
-</h1>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <title>Product Landing Page</title>
+</head>
+<body>
+    <header id="header">
+        <img id="header-img" src="" alt="Company Logo">
+        <nav id="nav-bar">
+           <a class="nav-link" href="#welcome">
+                   Welcome | 
+                    </a>
+<a class="nav-link" href="#promotion">
+                    Promotions |
+                    </a>
+<a class="nav-link" href="#contact">
+                    Contact Us
+                    </a>
+        </nav>
+    </header>
+            <section id="welcome">
+<h1 id="title">Ronniex Couture</h1>
+<p>
+    Welcome to Ronniex Couture where we sell the best fashonable clothes at the lowest rates and amaizing discounts check out the Promotions section to see the amaizing discounts available at the moment 
+</p>
+            </section><br><br><br><br>
+            <section id="promotion">
+                <h1>Promotions</h1>
+                <P>For our February discounts check out the video below</P>
+                <video title="february-discounts" width="320" height="240" controls>
+<source src="#" type="video/mp4">
+                </video>
+                <P>For our March discounts check out the video below</P>
+                <video title="march-discounts" width="320" height="240" controls>
+<source src="#" type="video/mp4">
+                </video>
+            </section><br><br><br>
+            <section id="contact">
+                <p>
+                    Are you interested in any of a discounted product in the video above, then fill in the form below and we will contact you.
+                </p>
+                <div id="container">
+ <form id="form" target="#">
+     <h2>Your Contact details</h2>
+     <label id="name"> Name:
+         <input id="name" type="text" placeholder="Justine Imasiku" required>
+     </label><br><br>
+     <label id="email"> Email:
+         <input id="name" type="email" placeholder="justineimasiku21@gmail.com" required>
+     </label><br><br>
+<button id="submit" type="submit">
+    Submit
+</button>
+ </form>               </div>
+            </section><br><br>
     </body>
 </html>
