--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
  <form id="form" target="#">
      <h2>Your Contact details</h2>
      <label id="name"> Name:
-         <input id="name" type="text" placeholder="Justine Imasiku" required>
+         <input id="name" type="text" placeholder="Marvellous Ibironke" required>
      </label><br><br>
      <label id="email"> Email:
-         <input id="name" type="email" placeholder="justineimasiku21@gmail.com" required>
+         <input id="name" type="email" placeholder="ibironketomiwa4@gmail.com" required>
      </label><br><br>
 <button id="submit" type="submit">
     Submit
